<resources>
    <string name="Nocerti">No Certificate Found</string>
    <string name="Tpinch">TPin Changed Successfully.</string>
    <string name="IntraBank1">Intra Bank</string>
    <string name="feedsugest">Suggest anything we can improve this..</string>
    <string name="logoout">Are you sure want to logout?</string>
    <string name="Cancle">Cancle</string>
    <string name="appointment">Thank you for booking an appointment for Credit card</string>
    <string name="AppointmentScheduled">Appointment Scheduled</string>
    <string name="Chequebook">Cheque-book</string>
    <string name="Passbook">Pass-book</string>
    <string name="EmailVerified">Email Verified !</string>
    <string name="EntervalidEmailaddress">Enter valid Email address !</string>
    <string name="Mynameis">My name is</string>
    <string name="WithPTIOat">With PTIO at </string>
    <string name="ConAppointment">Please CONFIRM your Appointment , </string>
    <string name="CANCELTocancel">CANCEL To cancel  it or call us . </string>
    <string name="Confirm">Confirm</string>
    <string name="ThankYou">ThankYou for Submitting Request for Investment Closure for Account No: </string>
    <string name="ThankYou1">ThankYou for Submitting Details for Investment Account Opening </string>
    <string name="ThankYou2">ThankYou for Submitting Details for Saving Account Open</string>
    <string name="toremove">Are you sure want to Remove?</string>
    <string name="Validate">Validate</string>
    <string name="seconds">seconds</string>
    <string name="YourAccountNo">Your Account No </string>
    <string name="debitedDallar"> is debited for $. </string>
    <string name="CreditedtoAccountNo"> Credited to Account No </string>
    <string name="TxnRefNo"> Txn Ref No. </string>
    <string name="TransactionSuccessful">Transaction Successful</string>
    <string name="Beneficiaryissuccessfullyaddedas">Beneficiary is successfully added as </string>
    <string name="Itwillbeactivatedafter">It will be activated after </string>
    <string name="Minutes"> Minutes.</string>
    <string name="SessionExpired"> "Session Expired!"</string>
    <string name="ResetTPinSuccessfully"> Reset TPin Successfully</string>
    <string name="PinSuccessfullyActivated"> Pin Successfully Activated.</string>
    <string name="YourCreditAmountTransfer"> Your Credit Amount Transfer </string>
    <string name="successfullydone">  successfully done ! </string>
    <string name="ImagenotSelected">  Image not Selected </string>
    <string name="Name1">Name : </string>
    <string name="BranchName1">Agency Name : </string>
    <string name="AccountNumber1">Account Number : </string>
    <string name="IFSCCode1">IFSC Code : </string>
    <string name="AccountTitle1">Account Title : </string>
    <string name="CustomerId1">Customer Id : </string>
    <string name="FromDate1">From Date : </string>
    <string name="ToDate1">To Date : </string>
    <string name="City1">City : </string>
    <string name="State1">State : </string>
    <string name="Address1">Address : </string>
    <string name="Spousename1">Spousename : </string>
    <string name="Mother1">Mother\'s : </string>
    <string name="Father1">Father\'s : </string>
    <string name="Selectben">Select Beneficiary</string>
    <string name="DownloadedSuccessfully">Downloaded Successfully!!!</string>
    <string name="otpincorrect">Otp is incorrect please enter correct Otp and try again.</string>
    <string name="Failedotp">Failed OTP Retrieved</string>
    <string name="FingerPrintActivated">FingerPrint Activated</string>
    <string name="TPinSuccessfullyGenerated">TPin Successfully Generated.</string>
    <string name="PerDay">Per Day: </string>
    <string name="NoOfTxnPerDay">No.Of Txn Per Day: </string>
    <string name="PerTxn">Per Txn: </string>
    <string name="TransactionLimitPerDay">Transaction Limit Per Day.</string>
    <string name="LimitPerTransaction">Limit Per Transaction.</string>
    <string name="NoOfTransactionPerDay">No.Of Transaction Per Day.</string>
    <string name="PleaseenterValue">Please enter Value</string>
    <string name="Please9digit">Please enter 9 digit mobile number.</string>
    <string name="MobileNumberSuccessfullyVerified">Mobile Number Successfully Verified.</string>
    <string name="ApplicationVersion">Application Version </string>
    <string name="Please_enter_valid_email_id">Please enter valid email id</string>
    <string name="Entered_Otp_is_invalidplease_enter_correct_Otp">Entered Otp is invalid, please enter correct Otp</string>
    <string name="UserSuccessfullyRegistered">"User Successfully Registered."</string>
    <string name="MPinChangedSuccessfully">MPin Changed Successfully.</string>
    <string name="EnterInstallmentAmount">Enter Installment Amount</string>
    <string name="Pleaseselectdates">Please select dates</string>
    <string name="Pleaseselectfromdate">Please select from date</string>
    <string name="Pleaseselecttodate">Please select to date</string>
    <string name="Fromdatecannotbegreaterthantodate">From date cannot be greater than to date.</string>
    <string name="FiledoesnotSupport">File does not Support,Please Install PDF Viewer</string>
    <string name="FiledoesnotSupportexcel">File does not Support,Please Install Excel Viewer</string>
    <string name="LoadingAccountStatement">Loading Account Statement Details....</string>
    <string name="AccountStatement">Account Statement</string>
    <string name="Name">Name:- </string>
    <string name="BranchName">Agency Name:- </string>
    <string name="AccountTitle">Account Title:- </string>
    <string name="CustomerId">Customer Id:- </string>
    <string name="TXNDate">TXN Date</string>
    <string name="ValueDate">Value Date</string>
    <string name="ReferenceNoChequeNo">ReferenceNo/ChequeNo</string>
    <string name="TrMode">Tr Mode</string>
    <string name="BranchCode">Agency Code</string>
    <string name="Balance">Balance</string>
    <string name="ClosingBalance">Closing Balance:- </string>
    <string name="generatedstatement">This is computer generated statement, does not required signature </string>
    <string name="WentWrong">Something Went Wrong, Please Try Again..</string>
    <string name="Entercustomerid">Enter customer id</string>
    <string name="MPinSuccessfullyGenerated">MPin Successfully Generated.</string>
    <string name="Clientidsuccessfullyverified">Client id successfully verified.</string>
    <string name="ErrTenorPeriod">Please Enter Tenor</string>
    <string name="ErrCreditAmount">Please Enter Credit Amount</string>
    <string name="ErrInstallmentFrequency">Please Select Installment Frequency Type</string>
    <string name="TenorperiodInMonths">Tenor (Period In Months)</string>
    <string name="ApplicationDate">Application Date</string>
    <string name="pleaseentercredityear">Please Enter Credit Year</string>
    <string name="pleaseentercreditmonth">Please Enter Credit Month</string>
    <string name="pleaseenterdate">Please Enter Date</string>
    <string name="pleaseenteramount">Please Enter Amount</string>
    <string name="ErrorMessage">Error Message</string>
    <string name="InvestmentClosure">Investment Closure</string>
    <string name="InvestmentAccountNumber">Investment Account Number</string>
    <string name="CertificationNumber">Certification Number</string>
    <string name="SelectInvestmentAccount">Select Investment Account</string>
    <string name="CreditRepayment">Credit Repayment</string>
    <string name="CreditAccount">Credit Account</string>
    <string name="SavingAccount">Saving Account</string>
    <string name="DueAmount">Due Amount</string>
    <string name="CertificateNumber">Certificate Number</string>
    <string name="Download">Download</string>
    <string name="Employee">Employee</string>
    <string name="Agency">Agency</string>
    <string name="TotalReceivable">Total Receivable</string>
    <string name="Taxes">Taxes</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Interest">Interest</string>
    <string name="PaymentFrequency">Payment Frequency</string>
    <string name="CertificateOfInvestment">Certificate Of Investment</string>
    <string name="ExpectedBalance">Expected Balance</string>
    <string name="InsuranceAmount">InsuranceAmount</string>
    <string name="InstallmentAmount">Installment Amount</string>
    <string name="PrincipalAmount">Principal Amount</string>
    <string name="ExpectedDate">Expected Date</string>
    <string name="InstallmentNumber">Installment Number</string>
    <string name="AmortizationChart">Amortization Chart</string>
    <string name="Select">--Select--</string>
    <string name="RepaymentDay">Repayment Day</string>
    <string name="InterestCalculationBaseDays">Interest Calculation Base Days</string>
    <string name="InsuranceRate">Insurance Rate</string>
    <string name="IsInsuranceApplicable">Is Insurance Applicable</string>
    <string name="ResetPeriod">Reset Period</string>
    <string name="ReAdjustmentPercentage">Re-Adjustment Percentage</string>
    <string name="AdjustmentRate"> AdjustmentRate</string>
    <string name="TypeofChart">Type of Chart</string>
    <string name="FirstDueDate">First Due Date</string>
    <string name="GracePeriod">Grace Period (In Days)</string>
    <string name="InterestCompoundingFrequency">Interest Compounding Frequency</string>
    <string name="InstallmentFrequency">Installment Frequency</string>
    <string name="CreditPeriodInYears">Credit Period (In Years)</string>
    <string name="CreditPeriodInMonths">Credit Period (In Months)</string>
    <string name="CreditDate">Credit Date</string>
    <string name="CreditAmount"> Credit Amount</string>
    <string name="DepositDate">Deposit Date</string>
    <string name="DepositAmount">Deposit Amount</string>
    <string name="SelectAccountNumber">Select Account Number</string>
    <string name="WrongPasscode">Wrong Pass code</string>
    <string name="Pleasewaitfor15secorUseMpin">Please wait for 15 sec or Use Mpin</string>
    <string name="FingerprintAuthentication">Fingerprint Authentication</string>
    <string name="PleaseScanYourFinger">Please Scan Your Finger</string>
    <string name="Yourdevicedoesnthavefingerprintsavedpleasecheckyoursecuritysettings">Your device doesn\'t have fingerprint saved, please check your security settings</string>
    <string name="Thebiometricsensoriscurrentlyunavailable">The biometric sensor is currently unavailable</string>
    <string name="Thisdevicedoesnothaveafingerprintsensor">This device does not have a fingerprint sensor</string>
    <string name="Youcanusethefingerprintsensortologin">You can use the fingerprint sensor to login</string>
    <string name="SelectBranch">Select Branch</string>
    <string name="Cheque">Cheque</string>
    <string name="Amount">Amount</string>
    <string name="Fieldbelowareoptional">Field below are optional</string>
    <string name="AdvancedSearch">Advanced Search</string>
    <string name="DateRange365">Date Range 365</string>
    <string name="ToDate">To Date</string>
    <string name="FromDate">From Date</string>
    <string name="SearchByDateRange">Search By Date Range</string>
    <string name="TranslationType">Transaction Type</string>
    <string name="SelectAccount">Select Account</string>
    <string name="Debit">Debit</string>
    <string name="Credit">Credit</string>
    <string name="Remark">Remark</string>
    <string name="Maximum">Maximum($)</string>
    <string name="Minimum">Minimum ($)</string>
    <string name="VIEWSTATEMENT">VIEW STATEMENT</string>
    <string name="txt_date">Date</string>
    <string name="txt_Timing">Timing</string>
    <string name="hint_mobile_no">Enter Mobile Number</string>
    <string name="hint_Enter_name">Enter Your Name</string>
    <string name="btn_continue">Continue</string>
    <string name="msg_enter_valid_email">Enter Valid Email Id</string>
</resources>