<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <include
        android:id="@+id/custom_toolbar_include"
        layout="@layout/custom_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:elevation="6dp"
                card_view:cardCornerRadius="15dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SelectAccount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_22sp">
                    </TextView>
                    <Spinner
                        android:id="@+id/spinnerAccount_Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spinner_border"
                        android:padding="10dp">
                    </Spinner>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TranslationType"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_15sp">
                    </TextView>
                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <!--adding a radio button -->
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:layout_weight="1"
                                android:padding="4dp"
                                android:text="@string/Debit"
                                android:textSize="20sp" />

                            <!--adding a radio button -->
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:layout_weight="1"
                                android:padding="4dp"
                                android:text="@string/Credit"
                                android:textSize="20sp" />
                        </RadioGroup>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SearchByDateRange"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_15sp">
                    </TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:paddingLeft="10dp"
                            android:text="@string/FromDate"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_15sp">
                        </TextView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/ToDate"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_15sp"
                            android:layout_weight="1">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/editTextFromDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:paddingLeft="3dp"
                            android:drawableLeft="@drawable/dateicon"
                            android:background="@drawable/edit_text_border"
                            android:layout_weight="1">
                        </TextView>
                        <TextView
                            android:id="@+id/editTextToDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/dateicon"
                            android:background="@drawable/edit_text_border"
                            android:layout_margin="3dp"
                            android:paddingLeft="3dp"
                            android:layout_weight="1">
                        </TextView>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/DateRange365">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tv_advanceSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="@dimen/text_22sp"
                android:textColor="@color/colorPrimaryDarkBlue"
                android:layout_margin="3dp"
                android:text="@string/AdvancedSearch"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_15sp"
                android:textColor="@color/colorGrey"
                android:layout_margin="3dp"
                android:text="@string/Fieldbelowareoptional"/>

            <LinearLayout
                android:id="@+id/ll_advsearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Amount"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_minaccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1"
                            android:layout_weight="1"
                            android:hint="@string/Minimum"
                            android:singleLine="true"
                            android:typeface="serif" />
                        <EditText
                            android:id="@+id/et_maxaccount"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:hint="@string/Maximum"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cheque"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp">
                </TextView>
                    <EditText
                        android:id="@+id/et_chequeno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/Enterachequeno.orchequerange"
                        android:singleLine="true"
                        android:typeface="serif" />
            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Remark"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"/>
                    <EditText
                        android:id="@+id/et_remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/Remark"
                        android:singleLine="true"
                        android:typeface="serif" />

            <Button
                android:id="@+id/buttonDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/VIEWSTATEMENT"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_22sp"
                android:background="@drawable/press_buttons">
            </Button>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>