<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activity.ScheduleVisitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/custom_toolbar_include"
            layout="@layout/custom_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_Enter_name"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:typeface="serif" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_enter_valid_email"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_mobile_no"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"/>

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:typeface="serif" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SelectBranch"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/black"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/product_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_border"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSearchByDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:textColor="@color/black"
                android:text="@string/txt_date"
                android:textSize="@dimen/text_16sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/editText_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:hint="@string/txt_date"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="1dp"
                android:textColor="@color/black"
                android:paddingRight="1dp"
                android:text="@string/txt_Timing"
                android:textSize="@dimen/text_16sp"
                android:typeface="serif" />


            <TextView
                android:id="@+id/editText_Timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:hint="@string/txt_Timing"
                android:paddingRight="3dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Remark"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp"/>

            <EditText
                android:id="@+id/editText_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:typeface="serif" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:layout_marginTop="10dp"
            android:background="@drawable/press_buttons"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_15sp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>